-*- coding: utf-8; fill-column: 68 -*-

=======
CHANGES
=======
0.7.7
=====
- orm
  - [feature] Added prefix_with() method
    to Query, calls upon select().prefix_with()
    to allow placement of MySQL SELECT
    directives in statements.  Courtesy
    Diana Clarke [ticket:2443]

- postgresql
  - [feature] Added new for_update/with_lockmode()
    options for Postgresql: for_update="read"/
    with_lockmode("read"),
    for_update="read_nowait"/
    with_lockmode("read_nowait").
    These emit "FOR SHARE" and "FOR SHARE NOWAIT",
    respectively.  Courtesy Diana Clarke 
    [ticket:2445]

0.7.6
=====
- orm
  - [bug] Fixed event registration bug
    which would primarily show up as
    events not being registered with 
    sessionmaker() instances created
    after the event was associated
    with the Session class.  [ticket:2424]

  - [bug] Fixed bug whereby a primaryjoin
    condition with a "literal" in it would
    raise an error on compile with certain
    kinds of deeply nested expressions
    which also needed to render the same
    bound parameter name more than once.
    [ticket:2425]

  - [feature] Added "no_autoflush" context
    manager to Session, used with with:
    will temporarily disable autoflush.

  - [feature] Added cte() method to Query,
    invokes common table expression support
    from the Core (see below). [ticket:1859]

  - [bug] Removed the check for number of
    rows affected when doing a multi-delete
    against mapped objects.   If an ON DELETE
    CASCADE exists between two rows, we can't
    get an accurate rowcount from the DBAPI;
    this particular count is not supported
    on most DBAPIs in any case, MySQLdb
    is the notable case where it is.
    [ticket:2403]

  - [bug] Fixed bug whereby objects using
    attribute_mapped_collection or 
    column_mapped_collection could not be
    pickled.  [ticket:2409]

  - [bug] Fixed bug whereby MappedCollection
    would not get the appropriate collection